fix: speech bubbles getting cut off

--- a/style.css
+++ b/style.css
@@ -182,14 +182,14 @@ td.time {
 
 .thip-1 {
     top: 50%;
-    right: -60px;
+    right: -15px;
     transform: rotate(15deg);
     color: #e64a40;
 }
 
 .whoosh {
-    bottom: -40px;
-    right: 150px;
+    bottom: -20px;
+    right: 20px;
     transform: rotate(-10deg);
     color: #f1c40f;
     font-size: 4rem;
@@ -197,7 +197,7 @@ td.time {
 
 .thip-2 {
     bottom: 20%;
-    left: -50px;
+    left: -15px;
     transform: rotate(-25deg);
     color: #e64a40;
 }
@@ -238,14 +238,14 @@ td.time {
     width: 100px;
     height: 70px;
     top: 20%;
-    left: -80px;
+    left: -15px;
 }
 
 .bubble-2 {
     width: 80px;
     height: 60px;
     bottom: 30%;
-    left: -100px;
+    left: -15px;
 }
 .bubble-2::after { left: 40px; border-width: 15px 0 0 15px; }
 .bubble-2::before { left: 37px; border-width: 18px 0 0 18px; }
@@ -253,7 +253,7 @@ td.time {
 .bubble-3 {
     width: 90px;
     height: 60px;
-    bottom: -60px;
+    bottom: -30px;
     left: 40%;
 }
 .bubble-3::after { left: 40px; top: -15px; border-width: 0 15px 15px 15px; border-color: transparent transparent #fff transparent; }
